# exadis

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  build_lassen_cuda.sh  build_lassen_omp.sh  build_mac.sh  build_tioga_hip.sh  configure.sh  full_build.sh
cmake/: sys.cmake.lassen  sys.cmake.lassen_omp  sys.cmake.mac_nicolas  sys.cmake.tioga  sys.cmake.tioga_mi250  sys.cmake.tioga_mi300  sys.cmake.tioga_omp  sys.cmake.tuo
examples/: CMakeLists.txt
examples/02_frank_read_src/: CMakeLists.txt  test_frank_read_src.cpp  test_frank_read_src.py
examples/03_collision/: test_collision.py
examples/04_bcc_junction/: test_bcc_junction.py
examples/05_fcc_junctions/: test_fcc_junctions.py
examples/06_nodal_xslip/: ta-elemental-single.data  test_nodal_xslip.py
examples/07_cross_slip/: test_cross_slip.py  test_cross_slip_bcc.py
examples/20_compare_forces/: compare_forces.py
examples/21_bcc_Ta_100nm_2e8/: CMakeLists.txt  example_bcc_Ta_100nm_2e8.cpp  example_bcc_Ta_100nm_2e8.py
examples/22_fcc_Cu_15um_1e3/: CMakeLists.txt  example_fcc_Cu_15um_1e3.cpp  example_fcc_Cu_15um_1e3.py
examples/23_fcc_Cu_15um_1e3_cell_friction/: example_fcc_Cu_15um_1e3_cell_friction.py
examples/30_oprec/: test_oprec.py
python/: CMakeLists.txt  exadis_pybind.cpp  exadis_pybind.h  make_topology_parallel.py  pyexadis_base.py  pyexadis_utils.py
src/: CMakeLists.txt  collision.h  cross_slip.h  crystal.h  driver.cpp  driver.h  exadis.h  force.h  functions.h  generate.cpp  integrator.h  makefile  mobility.h  neighbor.h  network.cpp  network.h  oprec.cpp  oprec.h  params.h  remesh.h  system.cpp  system.h  topology.h  types.h  utils.cpp  vec.h
src/collision_types/: CMakeLists.txt  collision_retroactive.cpp  collision_retroactive.h
src/cross_slip_types/: CMakeLists.txt  cross_slip_parallel.h  cross_slip_serial.cpp  cross_slip_serial.h
src/force_types/: CMakeLists.txt  force_common.h  force_core.h  force_fft.h  force_iso.h  force_lt.h  force_n2.h  force_segseglist.h
src/integrator_types/: integrator_multi.h  integrator_rkf.h  integrator_subcycling.h  integrator_trapezoid.h
src/mobility_types/: mobility_bcc0b.h  mobility_bcc_nl.h  mobility_fcc0.h  mobility_fcc0_fric.h  mobility_fcc0b.h  mobility_glide.h
src/neighbor_types/: CMakeLists.txt  neighbor_bin.cpp  neighbor_bin.h  neighbor_box.h
src/topology_types/: topology_parallel.h  topology_serial.h
tests/: CMakeLists.txt  debug.h  main.cpp  test_cuda.cpp  test_exadis.cpp  test_kokkos.cpp  test_system.cpp
tests/benchmark/: CMakeLists.txt  benchmark.cpp
tests/test_hip/: CMakeLists.txt  test_cycle.cpp  test_fft.cpp  test_force.cpp
tests/unit_tests/: CMakeLists.txt  run_tests.py  test_force.cpp  test_force.py  test_neighbor.cpp  test_pyexadis.py
tools/: CMakeLists.txt
tools/IO/: cli_parser.h
tools/fields/: CMakeLists.txt  dispgrad_field.cpp  dispgrad_field.h  fields.h  stress_field.cpp  stress_field.h
